--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,10 @@
 
 spring.datasource.url=jdbc:mysql://db:3306/spring_boot_mysql
 spring.datasource.username=root
-#spring.datasource.password=
+spring.datasource.password=
 MYSQL_ALLOW_EMPTY_PASSWORD=true
+#spring.datasource.username=root
+#spring.datasource.password=mari0828
 spring.datasource.name=SpringBootMysqlDataSource
 
 # pull de conexao
@@ -19,7 +21,7 @@ spring.datasource.hikari.idle-timeout=10000
 
 # JPA
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
