inclusão do delete

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 # DATASOURCE
 
 spring.datasource.url=jdbc:mysql://db:3306/spring_boot_mysql
+#spring.datasource.url=jdbc:mysql://localhost:3306/teste0711?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSl=false
 spring.datasource.username=root
 spring.datasource.password=
 MYSQL_ALLOW_EMPTY_PASSWORD=true
